--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,5 @@
 body{
-    background-color: azure;
+    background-color: #deedf9;
     margin: 0;
     scrollbar-width: none; /* Also needed to disable scrollbar Firefox */
     -ms-overflow-style: none;  /* Disable scrollbar IE 10+ */
@@ -23,7 +23,24 @@ body{
     align-items: center;
 }
 
+.center{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .p15{
     padding-right: 15px;
     padding-left: 15px;
+}
+
+.white-text{
+    color: white;
+}
+
+.primary-brand{
+    color: #4485ac;
+    font-weight: 800;
+    font-size: 18px;
 }
