--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -10,6 +10,15 @@ html, body, {
     left:0;
     right:0;
 }
+
+/* @font-face {
+    font-family: "Runescape";
+    font-weight: 400;
+    font-style: normal;
+    font-display: auto;
+    unicode-range: U+000-5FF;
+    src: local("runescape_uf"), url("/fonts/runescape_uf.ttf") format("ttf");
+} */
   
 .purp{
     color: #b784c2;
@@ -43,3 +52,4 @@ html, body, {
     font-weight: 800;
     font-size: 18px;
 }
+
