Fully migrated to Vue3 with Composition API

--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -3,6 +3,8 @@
 @back-white: #deedf9;
 @text-black: black;
 
+@mobile-width: 700px;
+
 .board-buttons{
     display: flex;
     flex-direction: row;
