--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -30,3 +30,28 @@
     justify-content: center;
     align-items: center;
 }
+
+.info-con{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+
+    &:hover .box-con{
+        display: inline;
+    }
+
+    .box-con{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 26px;
+        min-width: 100px;
+        max-width: 200px;
+        background-color: #b784c2;
+        border-radius: 3px;
+        padding: 2px 6px;
+    }
+
+}
