Fixed some small annoying CSS

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -89,6 +89,7 @@ input[type="text"] {
 
 .standard-dropdown .vs__dropdown-toggle,
 .standard-dropdown .vs__dropdown-menu{
+    min-width: 10rem;
     background-color: white;
     cursor: pointer;
 }
