--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -5,10 +5,86 @@
 
 @mobile-width: 700px;
 
+.main-con{
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-family: 'Runescape UF';
+}
+
+.center-con{
+    display: flex;
+    flex-grow: 2;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+    row-gap: 1rem;
+    margin: 0 auto;
+
+    #artwork{
+        height: 30%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;  
+    }
+
+    .wowText{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+
+    .bet-con{
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        padding: 0 10px 10px 10px;
+
+        .filterCon{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 1rem 0;
+
+            .filterInput{
+                background-color: transparent;
+                border: 2px solid black;
+                border-radius: 6px;
+                padding: 7px;
+                margin-left: 0.5rem;
+            }
+
+            .filterText{
+                margin: 0;
+                margin-right: 0.5rem;
+            }
+        }
+    
+        .list-con{
+            height: 100%;
+            overflow-y:scroll;
+            
+            .bettingBoard{
+                height: 0;
+                margin: 0;
+                padding: 0;
+            }
+        }
+    }
+}
+
+
+
 .board-buttons{
     display: flex;
     flex-direction: row;
     column-gap: 0.5rem;
+    margin-left: 0.5rem;
 
     button{
         padding: 0.5rem 1rem;
