--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -47,8 +47,9 @@
 
         .filterCon{
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column;
+            align-items: flex-end;
+            row-gap: 1rem;
             margin: 1rem 0;
 
             .filterInput{
